header width on small device fix

--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -168,3 +168,15 @@ textarea {
 .widget-header a:hover {
   text-decoration: none;
 }
+
+.subnavbar-inner .container {
+  padding: 0;
+}
+
+@media (max-width: 767px)
+{
+  #header {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+}
